<resources>
    <string name="app_name">Sodium Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="successfully_updated">Successfully Updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart">Chart</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="now">Now</string>
    <string name="calendar">Calendar</string>
    <string name="shop">Remove Ads</string>
    <string name="delete">delete</string>
</resources>