<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutCalendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/goBackOneMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_chevron_left_black_24dp" />

                <TextView
                    android:id="@+id/monthTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/goForwardOneMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_chevron_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sat"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scheduleRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
